--- a/reels.html
+++ b/reels.html
@@ -21,47 +21,7 @@
   <!-- 메인 영상 콘텐츠  -->
   <main class="content-area">
       <div class="reels-container">
-          
-          <article class="reel-wrapper">
-              
-              <div class="reel-video-card">
-                  <video src="videos/sample.mp4" loop autoplay muted></video>
-                  <div class="reel-overlay">
-                      <div class="user-info">
-                          <img src="assets/images/avatar.png" class="pic">
-                          <span class="name">username</span>
-                          <button class="follow">팔로우</button>
-                      </div>
-                      <div class="desc">릴스 설명글...</div>
-                  </div>
-              </div>
-
-              <div class="reel-actions">
-                  <button class="action-btn">
-                    <img src="assets/icons/heart.svg" alt="좋아요"> 
-                    <span>4953</span>
-                  </button>
-                  <button class="action-btn">
-                    <img src="assets/icons/comment.svg" alt="댓글"> 
-                    <span>91</span>
-                  </button>
-                  <button class="action-btn">
-                    <img src="assets/icons/repost.svg" alt="리포스트"> 
-                    <span>91</span>
-                  </button>
-                  <button class="action-btn">
-                    <img src="assets/icons/share.svg" alt="공유하기"> 
-                  </button>
-                  <button class="action-btn">
-                    <img src="assets/icons/bookmark.svg" alt="저장"> 
-                  </button>
-                  <button class="action-btn">
-                    <img src="assets/icons/more.svg" alt="더보기"> 
-                  </button>
-              </div>
-
-          </article>
-
+        <!-- JS로 동적 렌더링 -->
       </div>
 
       <!-- 스크롤 컨트롤 버튼 -->
@@ -75,5 +35,6 @@
       </div>
   </main>
 
+  <script src="js/reels.js"></script>
 </body>
 </html>
