Profile 페이지 수정

--- a/sidebar.html
+++ b/sidebar.html
@@ -44,7 +44,7 @@
       <span>만들기</span>
     </a>
 
-    <!-- ⭐ 핵심: 프로필 -->
+    <!-- 핵심: 프로필 -->
     <a class="sidebar__item sidebar__item--profile" href="profile.html">
       <img src="assets/images/avatar.png" alt="profile">
       <span>프로필</span>
