--- a/reels.html
+++ b/reels.html
@@ -6,6 +6,7 @@
     <title>릴스</title>
     <link rel="stylesheet" href="styles/reels.css">
     <link rel="stylesheet" href="styles/sidebar.css">
+    <link rel="stylesheet" href="styles/mobile.css">
 </head>
 <body>
   
@@ -28,6 +29,8 @@
         </button>
       </div>
   </main>
+
+  <nav id="bottom-nav"></nav>
 
   <script src="js/common.js"></script>
   <script src="js/reels.js"></script>
