--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=feed.html">
     <title>Instagram</title>
-    <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/side.css">
-    <script src="script.js" defer></script>
 </head>
 
 <body>
- 
+    <p>페이지를 이동 중입니다. 이동하지 않는다면 <a href="feed.html">여기</a>를 클릭하세요.</p>
 </body>
 
 </html>
