fix(reels): resolve sidebar click issue and optimize responsive layout

--- a/reels.html
+++ b/reels.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>릴스</title>
+    <link rel="stylesheet" href="styles/sidebar.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/reels.css">
-    <link rel="stylesheet" href="styles/sidebar.css">
-    <link rel="stylesheet" href="styles/mobile.css">
 </head>
 <body>
   
   <!-- 사이드바 메뉴 -->
-  <aside id="sidebar"></aside>
+  <div id="sidebar"></div>
 
   <!-- 메인 영상 콘텐츠  -->
   <main class="content-area">
