--- a/explore.html
+++ b/explore.html
@@ -6,53 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explore</title>
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/variables.css" />
     <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/explore.css" />
+
+    <script src="script.js" defer></script> 
     <script src="explore.js" defer></script>
 </head>
 
 <body>
+    <div id="sidebar"></div>
+    <div id="bottom-nav"></div>
+    
     <div class="explore-layout" id="exploreLayout">
-        <button class="explore-nav-toggle" id="exploreNavToggle" aria-expanded="false" aria-controls="exploreNav">
-            탐색 탭
-        </button>
-        <div class="explore-nav-scrim" id="exploreNavScrim" aria-hidden="true"></div>
-        <aside class="explore-nav" id="exploreNav">
-            <div class="explore-nav__logo">Instagram</div>
-            <a class="explore-nav__item" href="index.html">
-                <img src="assets/icons/home.svg" alt="home" />
-                <span>홈</span>
-            </a>
-            <a class="explore-nav__item" href="#">
-                <img src="assets/icons/search.svg" alt="search" />
-                <span>검색</span>
-            </a>
-            <a class="explore-nav__item explore-nav__item--active" href="explore.html">
-                <span class="explore-nav__dot">●</span>
-                <span>탐색 탭</span>
-            </a>
-            <a class="explore-nav__item" href="#">
-                <img src="assets/icons/reels.svg" alt="reels" />
-                <span>릴스</span>
-            </a>
-            <a class="explore-nav__item" href="#">
-                <img src="assets/icons/messenger.svg" alt="message" />
-                <span>메시지</span>
-            </a>
-            <a class="explore-nav__item" href="#">
-                <img src="assets/icons/heart.svg" alt="notifications" />
-                <span>알림</span>
-            </a>
-            <a class="explore-nav__item" href="#">
-                <span class="explore-nav__plus">+</span>
-                <span>만들기</span>
-            </a>
-            <a class="explore-nav__item" href="#">
-                <img src="assets/images/avatar.png" alt="profile" class="explore-nav__avatar" />
-                <span>프로필</span>
-            </a>
-        </aside>
-
+        
         <main class="explore">
             <section class="explore__grid" id="exploreGrid">
                 <a class="explore__item" href="#">
