refactor(index): replace inline sidebar and bottom navigation with placeholders for dynamic loading

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="styles/general.css" />
-    <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/feed.css" />
-    <link rel="stylesheet" href="styles/side.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
 
     <script src="script.js" defer></script>
 </head>
@@ -48,69 +47,7 @@
   <div class="main-container">
 
     <!-- 왼쪽 사이드바 -->
-    <aside class="sidebar">
-      <div class="logo">
-        <svg aria-label="Instagram" fill="currentColor" height="24" role="img" viewBox="0 0 24 24" width="24">
-          <title>Instagram</title>
-          <path
-            d="M12 2.982c2.937 0 3.285.011 4.445.064a6.087 6.087 0 0 1 2.042.379 3.408 3.408 0 0 1 1.265.823 3.408 3.408 0 0 1 .823 1.265 6.087 6.087 0 0 1 .379 2.042c.053 1.16.064 1.508.064 4.445s-.011 3.285-.064 4.445a6.087 6.087 0 0 1-.379 2.042 3.643 3.643 0 0 1-2.088 2.088 6.087 6.087 0 0 1-2.042.379c-1.16.053-1.508.064-4.445.064s-3.285-.011-4.445-.064a6.087 6.087 0 0 1-2.043-.379 3.408 3.408 0 0 1-1.264-.823 3.408 3.408 0 0 1-.823-1.265 6.087 6.087 0 0 1-.379-2.042c-.053-1.16-.064-1.508-.064-4.445s.011-3.285.064-4.445a6.087 6.087 0 0 1 .379-2.042 3.408 3.408 0 0 1 .823-1.265 3.408 3.408 0 0 1 1.265-.823 6.087 6.087 0 0 1 2.042-.379c1.16-.053 1.508-.064 4.445-.064M12 1c-2.987 0-3.362.013-4.535.066a8.074 8.074 0 0 0-2.67.511 5.392 5.392 0 0 0-1.949 1.27 5.392 5.392 0 0 0-1.269 1.948 8.074 8.074 0 0 0-.51 2.67C1.012 8.638 1 9.013 1 12s.013 3.362.066 4.535a8.074 8.074 0 0 0 .511 2.67 5.392 5.392 0 0 0 1.27 1.949 5.392 5.392 0 0 0 1.948 1.269 8.074 8.074 0 0 0 2.67.51C8.638 22.988 9.013 23 12 23s3.362-.013 4.535-.066a8.074 8.074 0 0 0 2.67-.511 5.625 5.625 0 0 0 3.218-3.218 8.074 8.074 0 0 0 .51-2.67C22.988 15.362 23 14.987 23 12s-.013-3.362-.066-4.535a8.074 8.074 0 0 0-.511-2.67 5.392 5.392 0 0 0-1.27-1.949 5.392 5.392 0 0 0-1.948-1.269 8.074 8.074 0 0 0-2.67-.51C15.362 1.012 14.987 1 12 1Zm0 5.351A5.649 5.649 0 1 0 17.649 12 5.649 5.649 0 0 0 12 6.351Zm0 9.316A3.667 3.667 0 1 1 15.667 12 3.667 3.667 0 0 1 12 15.667Zm5.872-10.859a1.32 1.32 0 1 0 1.32 1.32 1.32 1.32 0 0 0-1.32-1.32Z">
-          </path>
-        </svg>
-      </div>
-
-      <nav class="sidebar-nav">
-        <ul class="menu">
-          <li class="menu-item">
-            <a href="#"><img src="assets/icons/home.svg" alt="홈" /><span>홈</span></a>
-          </li>
-          <li class="menu-item">
-            <a href="#"><img src="assets/icons/reels.svg" alt="릴스" /><span>릴스</span></a>
-          </li>
-          <li class="menu-item">
-            <a href="#"><img src="assets/icons/share.svg" alt="메세지" /><span>메세지</span></a>
-          </li>
-          <li class="menu-item">
-            <a href="#">
-              <svg aria-label="검색" fill="currentColor" height="24" role="img" viewBox="0 0 24 24" width="24">
-                <title>검색</title>
-                <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none"
-                  stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-                <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                  stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
-              </svg>
-              <span>검색</span>
-            </a>
-          </li>
-
-          <li class="menu-item">
-            <a href="#">
-              <svg aria-label="탐색 탭" fill="currentColor" height="24" role="img" viewBox="0 0 24 24" width="24">
-                <title>탐색 탭</title>
-                <polygon fill="none"
-                  points="13.941 13.953 7.581 16.424 10.06 10.056 16.42 7.585 13.941 13.953"
-                  stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></polygon>
-                <polygon fill-rule="evenodd"
-                  points="10.06 10.056 13.949 13.945 7.581 16.424 10.06 10.056">
-                </polygon>
-                <circle cx="12.001" cy="12.005" fill="none" r="10.5" stroke="currentColor"
-                  stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></circle>
-              </svg>
-              <span>탐색 탭</span>
-            </a>
-          </li>
-
-          <li class="menu-item">
-            <a href="#"><img src="assets/icons/heart.svg" alt="알림" /><span>알림</span></a>
-          </li>
-          <li class="menu-item">
-            <a href="#"><img src="assets/icons/add.svg" alt="만들기" /><span>만들기</span></a>
-          </li>
-          <li class="menu-item">
-            <a href="#"><img class="menu-avatar" src="assets/images/profile.jpeg" alt="프로필" /><span>프로필</span></a>
-          </li>
-        </ul>
-      </nav>
-    </aside>
+    <div id="sidebar"></div>
 
 
     <!-- 가운데 콘텐츠 -->
@@ -385,21 +322,7 @@
 
 
   <!-- 모바일 하단바 -->
-  <nav class="mobile-bottombar">
-    <a href="#" aria-label="홈"><img src="assets/icons/home.svg" alt="홈" /></a>
-    <a href="#" aria-label="검색">
-      <svg aria-label="검색" fill="currentColor" height="24" role="img" viewBox="0 0 24 24" width="24">
-        <title>검색</title>
-        <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none"
-          stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-          stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
-      </svg>
-    </a>
-    <a href="#" aria-label="만들기"><img src="assets/icons/add.svg" alt="만들기" /></a>
-    <a href="#" aria-label="릴스"><img src="assets/icons/reels.svg" alt="릴스" /></a>
-    <a href="#" aria-label="프로필"><img class="bottom-avatar" src="assets/images/profile.jpeg" alt="프로필" /></a>
-  </nav>
+  <div id="bottom-nav"></div>
 
 </body>
 
