style: adjust index page layout and fix sidebar alignment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/feed.css" />
     <link rel="stylesheet" href="styles/sidebar.css" />
@@ -43,11 +44,11 @@
     </div>
   </header>
 
+  <!-- 왼쪽 사이드바 -->
+  <div id="sidebar"></div>
+
 
   <div class="main-container">
-
-    <!-- 왼쪽 사이드바 -->
-    <div id="sidebar"></div>
 
 
     <!-- 가운데 콘텐츠 -->
