refactor: cleanup project structure

--- a/reels.html
+++ b/reels.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>릴스</title>
+    <title>Instagram - Reels</title>
 
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/sidebar.css" />
     <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/reels.css">
+
+    <script src="script.js" defer></script> 
+    <script src="js/reels.js" defer></script>
 </head>
 <body>
   
@@ -33,10 +36,8 @@
       </div>
   </main>
 
-  <nav id="bottom-nav"></nav>
-
-  <script src="js/common.js"></script>
-  <script src="js/reels.js"></script>
+  <!-- 모바일 하단바 -->
+  <div id="bottom-nav"></div>
 
 </body>
 </html>
