--- a/explore.html
+++ b/explore.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Explore</title>
+    <title>Instagram - Explore</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/variables.css" />
     <link rel="stylesheet" href="styles/general.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/explore.css" />
 
     <script src="script.js" defer></script> 
-    <script src="explore.js" defer></script>
+    <script src="js/explore.js" defer></script>
 </head>
 
 <body>
