--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Instagram - Feed</title>
 
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/general.css" />
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/mobile.css" />
 
     <script src="script.js" defer></script>
+    <script src="js/feed.js" defer></script>
 </head>
 
 <body>
